# SolarEnergy_Linux

./: .gitignore  CMakeLists.txt  RayTracingPipeline.cpp  RayTracingPipeline.h  main.cpp
DataStructure/: CMakeLists.txt
DataStructure/Grid/: Grid.cu  Grid.cuh  RectGrid.cu  RectGrid.cuh
DataStructure/Heliostat/: Heliostat.cu  Heliostat.cuh  RectangleHelio.cu  RectangleHelio.cuh
DataStructure/Receiver/: Receiver.cu  Receiver.cuh
DataStructure/Scene/: CMakeLists.txt  SceneConfiguration.cpp  SceneConfiguration.h  SolarScene.cpp  SolarScene.h  solar_scene.cpp  solar_scene.h
DataStructure/Sunray/: Sunray.cu  Sunray.cuh
InputFiles/Delingha/: 70123.json  70123.scn
InputFiles/SolTraceHeliostatFiled/: 6282_QMCRT.scn  sandun.scn
InputFiles/example/: example_configuration.json  example_scene.scn  example_scene_with_helio_property.scn
QuasiMonteCarloRayTracing/: CMakeLists.txt  QuasiMonteCarloRayTracer.cpp  QuasiMonteCarloRayTracer.h  RayTracingArgumentStruct.h  RectangleReceiverRectGridRayTracing.cu  RectangleReceiverRectGridRayTracing.cuh
QuasiMonteCarloRayTracing/Grid/: rectGridDDA.cu  rectGridDDA.cuh
QuasiMonteCarloRayTracing/Receiver/: rectangleReceiverIntersection.cu  rectangleReceiverIntersection.cuh
RayTracingPipeline/: CMakeLists.txt
Scene/: CMakeLists.txt  SceneConfiguration.cpp  SceneConfiguration.h  SceneLoader.cpp  SceneLoader.h  SceneProcessor.cpp  SceneProcessor.cu  SceneProcessor.h  SolarScene.cpp  SolarScene.h
Scene/DataStructure/Grid/: Grid.cu  Grid.cuh  RectGrid.cu  RectGrid.cuh
Scene/DataStructure/Heliostat/: FocusFlatRectangleHelio.cu  FocusFlatRectangleHelio.cuh  Heliostat.cu  Heliostat.cuh  RectangleHelio.cu  RectangleHelio.cuh
Scene/DataStructure/Receiver/: CylinderReceiver.cuh  Receiver.cu  Receiver.cuh  RectangleReceiver.cu  RectangleReceiver.cuh
Scene/DataStructure/Sunray/: Sunray.cu  Sunray.cuh
SolarEnergyRayTracingTests/: CMakeLists.txt
SolarEnergyRayTracingTests/DataStructureTests/: CMakeLists.txt  CylinderReceiverTest.cpp  DataStructureUtil.h  FocusFlatRectangleHelioTest.cpp  RectGridTest.cpp  RectangleHelioTest.cpp  SceneConfigurationTest.cpp  SceneLoaderTest.cpp  SceneProcessorTest.cpp
SolarEnergyRayTracingTests/DataStructureTests/test_file/: test_configuration.json  test_invalid_configuration.json  test_partial_configuration.json  test_rectgrid.scn  test_scene_bad_corresponding.scn  test_scene_bad_nonRE.scn  test_scene_good_for_focusFlatRectangleHelio.scn
SolarEnergyRayTracingTests/GenerateTemporaryOutput/: CMakeLists.txt  CheckFocusFlatRectangleHelioResult.cpp  GenerateSolTraceAndTonatiuhInputScene.cpp
SolarEnergyRayTracingTests/GenerateTemporaryOutput/CheckFocusFlatRectangleHelioResult/input_files/: test_scene_good_for_focusFlatRectangleHelio.scn
SolarEnergyRayTracingTests/GenerateTemporaryOutput/input_file/: 6282_QMCRT.scn  6282_configure.json
SolarEnergyRayTracingTests/GenerateTemporaryOutput/output_file/: solTrace_output_6282.txt  tonatiuh_output_6282.txt
SolarEnergyRayTracingTests/QuasiMonteCarloRayTracingTests/: CMakeLists.txt  NewTypeHeliostatForTest.cpp  NewTypeHeliostatForTest.h  QuasiMonteCarloRayTracerTest.cpp  cylinderReceiverIntersectionTest.cpp  receiverIntersectUtil.cpp  receiverIntersectUtil.h  rectGridDDATest.cpp  rectangleReceiverIntersectionTest.cpp
SolarEnergyRayTracingTests/QuasiMonteCarloRayTracingTests/test_file/: test_configuration2.json  test_scene_cylinder_receiver.scn
SolarEnergyRayTracingTests/RayTracingPipelineTests/: CMakeLists.txt  TaskLoaderTest.cpp
SolarEnergyRayTracingTests/RayTracingPipelineTests/test_file/: example_scene.scn  taskLoadWithInvalidElements2.txt  taskLoadWithInvalidElements3.txt  taskLoadWithLessThanNIndexes.txt  taskLoadWithMoreThanNIndexes.txt
SolarEnergyRayTracingTests/ToolTests/: ArgumentParserTest.cpp  CMakeLists.txt  ImageSaverTest.cpp  RandomGeneratorCPUTest.cpp  RandomGeneratorGPUTest.cpp  RegularExpressionTreeTest.cpp
Tool/ArgumentParser/: ArgumentParser.cpp  ArgumentParser.h
Tool/ImageSaver/: ImageSaver.cpp
Tool/RandomNumberGenerator/: RandomGenerator.cu  RandomGenerator.cuh
Util/: common_var.cpp  common_var.h  destroy.h  global_constant.h  global_function.cuh  vector_arithmetic.cuh
